    some occurrences of c_str() with wx_str() when using MSVC 8 or later.

  + Some compilers, notably Borland C++ and DigitalMars, don't correctly
    convert operator?: operands to the same type and fail with compilation
    error instead. This can be worked around by explicitly casting to const
    wxChar*: wxLogError(_("error: %s"), !err.empty() ? (const wxChar*)err.c_str() : "")

- wxCtime() and wxAsctime() return char*; this is incompatible with Unicode
  build in wxWidgets 2.8 that returned wchar_t*.

- DigitalMars compiler has a bug that prevents it from using
  wxUniChar::operator bool in conditions and it erroneously reports type
  conversion ambiguity in expressions such as this:
     for ( wxString::const_iterator p = s.begin(); *p; ++p )
  This can be worked around by explicitly casting to bool:
     for ( wxString::const_iterator p = s.begin(); (bool)*p; ++p )

- Virtual wxHtmlParser::AddText() takes wxString, not wxChar*, argument now.

- Functions that took wxChar* arguments that could be NULL in wxWidgets 2.8
  are deprecated and passing NULL to them won't compile anymore, wxEmptyString
  must be used instead.

- wxTmemxxx() functions take either wxChar* or char*, not void*: use memxxx()
  with void pointers.

- Removed insecure wxGets() and wxTmpnam() functions.

- Removed global GetLine() function from wx/protocol/protocol.h, use
  wxProtocol::ReadLine() instead.

- wxVariant no longer derives from wxObject. wxVariantData also no longer
  derives from wxObject; instead of using wxDynamicCast with wxVariantData you
  can use the macro wxDynamicCastVariantData with the same arguments.

- wxWindow::Next/PrevControlId() don't exist any more as they couldn't be
  implemented correctly any longer because automatically generated ids are not
  necessarily allocated consecutively now. Use GetChildren() to find the
  next/previous control sibling instead.

- Calling wxConfig::Write() with an enum value will fail to compile because